# elecdetect

./: CMakeLists.txt  README.md
ElecDetec/: CMakeLists.txt  testing.sh
ElecDetec/source/: AlgorithmController.cpp  BinaryContours.cpp  BinaryContours.h  ClassifierModule.cpp  ClassifierModule.h  ColorChannel.cpp  ColorChannel.h  Debug.h  Defines.h  DistanceTransform.cpp  DistanceTransform.h  DummyFeature.cpp  DummyFeature.h  ElecDetec.cpp  ElecDetec.h  Exceptions.h  FeatureExtractorModule.cpp  FeatureExtractorModule.h  GradientImage.cpp  GradientImage.h  GradientOrientationFeatures.cpp  GradientOrientationFeatures.h  HaarWavelets.cpp  HaarWavelets.h  Hog.cpp  Hog.h  LinSVM.cpp  LinSVM.h  Mat.h  OrientationFilter.cpp  OrientationFilter.h  OwnBrief.cpp  OwnBrief.h  PCA.cpp  PCA.h  PipelineController.cpp  PipelineController.h  PointVec.h  PreprocessingModule.cpp  PreprocessingModule.h  (+15 more)
ElecDetec/source/libsvm-dense/: svm.cpp  svm.h
ElecDetec/source/rf/: RandomForest.h  Utils.h
SocketAnnotator/: CMakeLists.txt  annotations.xml  annotations_legal.xml
SocketAnnotator/source/: CAnnotation.cpp  CAnnotation.h  SocketAnnotator.cpp  Utils.h
source/: AlgorithmController.cpp  AlgorithmController.h  ElecDetec.h  GradientOrientationFeatures.h  HaarWavelets.cpp  HaarWavelets.h  Hog.h  OrientationFilter.cpp  RandomForest.cpp  main.cpp
source/rf/: Params.h  RandomForest.h
